--- a/app/app.json
+++ b/app/app.json
@@ -1,6 +1,6 @@
 {
-    "appOk": true,
+    "appOk": false,
     "like": true,
-    "pinglun": false,
-    "info":"你好啊，李化云"
+    "pinglun": true,
+    "info":"感谢下载APP，可惜已经停服……"
 }
